# advent-of-code

./: CMakeLists.txt
include/: aoc_types.h  aoc_utils.h  files.h
src/: CMakeLists.txt  aoc.cpp  aoc.h  main.cpp
src/sols/2022/: 2022_day_1.cpp  2022_day_2.cpp  2022_day_3.cpp  2022_day_4.cpp  2022_day_5.cpp  2022_day_6.cpp  aoc_2022.cpp  aoc_2022.h
src/utils/: aoc_utils.cpp  files.cpp
tests/: CMakeLists.txt
tests/2022/: 2022_day_1_test.cpp  2022_day_2_test.cpp  2022_day_3_test.cpp  2022_day_4_test.cpp  2022_day_5_test.cpp  2022_day_6_test.cpp
